--- a/public_html/assets/css/globals/font_loader.css
+++ b/public_html/assets/css/globals/font_loader.css
@@ -7,3 +7,7 @@
 
 /*///////////////////////////////////////////////////////////////*/
 
+@font-face{
+	font-family: r;
+	src: url("../../fonts/ttf/Roboto-Regular.ttf");
+}
